--- a/src/assets/tailwindOut.css
+++ b/src/assets/tailwindOut.css
@@ -3497,6 +3497,10 @@ details.collapse summary::-webkit-details-marker {
   display: none;
 }
 
+.h-2 {
+  height: 0.5rem;
+}
+
 .h-4 {
   height: 1rem;
 }
@@ -3557,6 +3561,10 @@ details.collapse summary::-webkit-details-marker {
   width: 13rem;
 }
 
+.w-56 {
+  width: 14rem;
+}
+
 .w-6 {
   width: 1.5rem;
 }
@@ -3591,6 +3599,10 @@ details.collapse summary::-webkit-details-marker {
 
 .grow {
   flex-grow: 1;
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
 
 .grid-cols-\[1fr_4fr\] {
@@ -3738,6 +3750,10 @@ details.collapse summary::-webkit-details-marker {
   stroke: currentColor;
 }
 
+.p-0 {
+  padding: 0px;
+}
+
 .p-10 {
   padding: 2.5rem;
 }
@@ -3763,6 +3779,11 @@ details.collapse summary::-webkit-details-marker {
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .py-4 {
@@ -4061,4 +4082,8 @@ details.collapse summary::-webkit-details-marker {
 
 .rtl\:space-x-reverse:where([dir="rtl"], [dir="rtl"] *) > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 1;
+}
+
+.\[\&_li\>\*\]\:rounded-none li>* {
+  border-radius: 0px;
 }
